<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewmodel"
            type="com.example.e_commerce.ui.login.viewmodel.LoginViewModel"/>
    </data>
    <androidx.core.widget.NestedScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"/>
            <TextView
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_lafyuu"
                style="@style/LargeTileStyle"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_to_continue"
                style="@style/SmallTileStyle"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/email"
                app:boxStrokeWidth="0.5dp"
                app:startIconCheckable="true"
                app:startIconTint="@color/neutral_grey"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SmallTileStyle"
                    android:text="@={viewmodel.email}"
                    android:textStyle="bold"
                    android:inputType="textEmailAddress"
                    android:hint="@string/your_email" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/passowrd"
                app:startIconCheckable="true"
                app:passwordToggleEnabled="true"
                app:boxStrokeWidth="0.5dp"
                app:startIconTint="@color/neutral_grey"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewmodel.password}"
                    style="@style/SmallTileStyle"
                    android:textStyle="bold"
                    android:inputType="textPassword"
                    android:hint="@string/your_password" />

            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signInBtn"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:text="@string/sign_in"
                android:background="@drawable/button_back"
                style="@style/ButtonStyle"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:background="@color/neutral_grey" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/white"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textAllCaps="true"
                    android:textColor="@color/neutral_grey" />
            </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/google_signin_btn"
            style="@style/SocialButtonStyle"
            android:drawableStart="@drawable/google"
            android:text="@string/with_google" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/facebook_signin_btn"
            style="@style/SocialButtonStyle"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/facebook"
            android:text="@string/with_facebook" />

        <TextView
            android:id="@+id/forgot_password_tv"
            style="@style/MediumPrimaryTextViewStyle"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SmallTileStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/don_t_have_an_account" />

            <TextView
                android:id="@+id/register_tv"
                style="@style/MediumPrimaryTextViewStyle"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:text="@string/register"
                android:layout_width="0dp" />
        </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
