<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.example.e_commerce.ui.login.viewmodel.ForgotPasswordViewModel" />
    </data>

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:layout_width="80dp"
            android:layout_height="4dp"
            android:layout_margin="16dp"
            android:background="@color/neutral_grey" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/SmallTileStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/forget_password_msg"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgotPassEmailLayout"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/email"
            app:boxStrokeWidth="0.5dp"
            app:startIconCheckable="true"
            android:layout_margin="16dp"
            app:startIconTint="@color/neutral_grey"
            app:errorTextColor="@android:color/holo_red_light"
            app:boxStrokeErrorColor="@android:color/holo_red_light"
            app:error="@{viewmodel.error}"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgotPassEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SmallTileStyle"
                android:text="@={viewmodel.email}"
                android:textStyle="bold"
                android:inputType="textEmailAddress"
                android:hint="@string/your_email"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendEmail"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:text="@string/send"
            android:onClick="@{() -> viewmodel.sendPasswordResetEmail()}"
            android:background="@drawable/button_back"
            style="@style/ButtonStyle"
            />

    </LinearLayout>

</layout>